@@ -1,5 +1,10 @@
 2007-09-27  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/chart/renderer/category/StatisticalLineAndShapeRenderer.java
+	(drawItem): Apply new offset option to x-coordinates.
+
+2007-09-27  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/axis/CategoryAxis.java
 	(getCategorySeriesMiddle): New method,
 	* source/org/jfree/chart/renderer/category/LineAndShapeRenderer.java
